--- a/Sikayet/Views/Shared/_Layout.cshtml
+++ b/Sikayet/Views/Shared/_Layout.cshtml
@@ -13,7 +13,6 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="">
-    <link rel="shortcut icon" href="../../Content/img/favicon.png">
 
     <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
     <script src="//netdna.bootstrapcdn.com/bootstrap/3.1.1/js/bootstrap.min.js"></script>
@@ -63,6 +62,17 @@
                     {
                         <li><a href="/Home/Index">Anasayfa</a></li>
                         <li><a href="/Sikayet/SikayetEkle">Şikayet Gönder</a></li>
+                        <li class="dropdown">
+                            <a data-toggle="dropdown" class="dropdown-toggle" href="#">
+                                <span class="username">Şikayetlerim</span>
+                                <b class="caret"></b>
+                            </a>
+                            <ul class="dropdown-menu extended">
+                                <div class="log-arrow-up"></div>
+                                <li><a href="/Kullanici/Profilim"><i class="icon-angle-right"></i>Beklemedeki Şikayetlerim</a></li>
+                                <li><a href="/Kullanici/EskiSikayetler"><i class="icon-angle-right"></i>Geçmiş Şikayetlerim</a></li>
+                            </ul>
+                        </li>
                         <li><a href="/Kullanici/Bilgiler">Bilgilerim</a></li>
                         <li><a href="/Home/Iletisim">İletişim</a></li>
                     }
@@ -70,7 +80,17 @@
                     else
                     {
                         <li><a href="/Home/Index">Anasayfa</a></li>
-                        <li><a href="/Sikayet/SikayetListele">Şikayetleri Listele</a></li>
+                        <li class="dropdown">
+                            <a data-toggle="dropdown" class="dropdown-toggle" href="#">
+                                <span class="username">Şikayetleri Listele</span>
+                                <b class="caret"></b>
+                            </a>
+                            <ul class="dropdown-menu extended">
+                                <div class="log-arrow-up"></div>
+                                <li><a href="/Sikayet/SikayetListele"><i class="icon-angle-right"></i>Beklemedeki Şikayetler</a></li>
+                                <li><a href="/Sikayet/EskiSikayetler"><i class="icon-angle-right"></i>Silinmiş Şikayetler</a></li>
+                            </ul>
+                        </li>
                         <li><a href="/Kullanici/KullaniciListele">Kullanıcılar</a></li>
                         <li><a href="/Home/Iletisim">İletişim</a></li>
                     }
@@ -175,10 +195,8 @@
 
 <!-- js placed at the end of the document so the pages load faster -->
 
-<script class="include" type="text/javascript" src="../../Content/js/jquery.dcjqaccordion.2.7.js"></script>
 <script type="text/javascript" src="../../Content/js/hover-dropdown.js"></script>
 <script src="../../Content/js/jquery.scrollTo.min.js"></script>
-<script src="../../Content/js/jquery.nicescroll.js" type="text/javascript"></script>
 <script src="../../Content/js/respond.min.js" ></script>
 
 <!--common script for all pages-->
