--- a/Sikayet/Views/Sikayet/SikayetDetay.cshtml
+++ b/Sikayet/Views/Sikayet/SikayetDetay.cshtml
@@ -4,13 +4,13 @@
 }
 
 @model Sikayet.Models.Sikayet
-    
+
 <div class="row col-md-12">
     <div class="col-md-6 col-md-offset-3">
         <br />
         <section class="panel">
             <header class="panel-heading">
-               Şikayet
+                Şikayet
             </header>
             <div class="panel-body">
                 <p>
@@ -20,31 +20,34 @@
                     @Model.Aciklama
                 </p>
                 <p>
-                    <img src="@Model.Fotograf" style="width: 500px; height: 500px"/>
+                    <img src="@Model.Fotograf" style="width: 500px; height: 500px" />
                 </p>
-                <hr/>
+                <hr />
+                <span class="label label-info">Gönderme tarihi: @Model.Tarih.ToString()</span>
 
-                
             </div>
             <header class="panel-heading">
                 Gönderenin Bilgileri
             </header>
             <div class="panel-body">
                 <p>
-                   Ad Soyad: <b>@Model.Kullanici.Adi @Model.Kullanici.Soyadi</b> 
+                    Ad Soyad: <b>@Model.Kullanici.Adi @Model.Kullanici.Soyadi</b>
                 </p>
                 <p>
                     Email: <b>@Model.Kullanici.Email</b>
                 </p>
                 <p>
-                   Telefon: <b>@Model.Kullanici.Telefon</b>
+                    Telefon: <b>@Model.Kullanici.Telefon</b>
                 </p>
             </div>
-            
+
             <header class="panel-heading">
                 Mahalle Bilgileri
             </header>
             <div class="panel-body">
+                <p>
+                    Sokak: <b>@Model.Sokak</b>
+                </p>
                 <p>
                     Mahalle: <b>@Model.Mahalle.Adi</b>
                 </p>
@@ -56,6 +59,37 @@
                 </p>
             </div>
             
+            @if (User.IsInRole("moderator"))
+            {
+                <header class="panel-heading">
+                    Yorum Ekle
+                </header>
+                <div class="panel-body">
+                    <form action="/Sikayet/YorumEkle/@Model.SikayetId" method="post">
+                        <div class="login-wrap">
+                            <textarea id="Aciklama" class="form-control" name="yorum" rows="2" cols="20" placeholder="Yorum..."></textarea>
+                            <br/>
+                            <button class="btn btn-success" type="submit">Ekle</button>
+                        </div>
+
+                    </form>
+                    <div class="panel-body">
+                        @Model.Yorum
+                    </div> 
+                </div> 
+            }
+            else
+            {
+                <header class="panel-heading">
+                    Yorum
+                </header>
+                <div class="panel-body">
+                    <h3><b>@Model.Yorum</b></h3> 
+                </div> 
+            }
+
+            
+
             <header class="panel-heading">
                 Durum
             </header>
@@ -69,9 +103,9 @@
                 {
                     <p>Bu şikayet kaldırıldı.</p>
                 }
-                
+
             </div>
-            
+
         </section>
 
     </div>
